Fixed unclickable CTA and spacing

--- a/express/blocks/puf/puf.css
+++ b/express/blocks/puf/puf.css
@@ -18,7 +18,7 @@ main .puf.block .carousel-container .carousel-fader-right {
 }
 
 main .puf.block .carousel-container a.button.carousel-arrow {
-  margin-top: calc(100vh / 2);
+  margin-top: 100vh;
   position: sticky;
 }
 
@@ -271,7 +271,6 @@ main .block.puf .puf-card-banner.recommended {
 main .block.puf .puf-card-container:not(:has(.recommended)) {
   flex: 1;
   align-self: stretch;
-  z-index: -1;
   border-top: 1px #e5e5e5 solid;
   border-left: 1px #e5e5e5 solid;
   border-bottom: 1px #e5e5e5 solid;
@@ -286,6 +285,7 @@ main .block.puf .puf-card-container:has(.recommended) {
   padding: 48px 8px 8px 8px;
   margin-top: 20px;
   height: auto;
+  z-index: 0;
 }
 
 main .block.puf .puf-card .puf-card-banner {
@@ -438,7 +438,7 @@ main .block.puf .puf-card .puf-card-banner {
     position: relative;
     overflow: hidden;
     margin-bottom: 0;
-    padding: 0 12px;
+    padding: 0 12px 12px 0;
   }
 
   main .block.puf .puf-card .puf-card-top .puf-card-plans {
@@ -462,6 +462,14 @@ main .block.puf .puf-card .puf-card-banner {
   main .block.puf .carousel-container.slide-1-selected .carousel-fader-left {
     opacity: 0;
     pointer-events: none;
+  }
+
+  main .block.puf .carousel-container.slide-1-selected .carousel-fader-right {
+    right: 1rem;
+  }
+
+  main .block.puf .carousel-container.slide-2-selected .carousel-fader-left {
+    left: 0.7rem;
   }
 
   main .block.puf .carousel-container.slide-1-selected .carousel-fader-right,
